# iAgent-windows

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  OAUTH.md  README.md  TELEMETRY.md  build.rs
.cargo/: config.toml
.github/workflows/: windows-backend.yml
app/: launch-iagent.ps1
app/iagent-py/: .gitignore  LICENSE  README.md  check_ws.py  config.example.toml  iagent.spec  pair_device.py  pyproject.toml  test_ipc.py  test_ipc_full.py  test_pair_device.py  test_ws.py
app/iagent-py/iagent/: __main__.py  active_window.py  app.py  background_command_runner.py  command_policy.py  companion_manager.py  config.py  conversation_history.py  create_document_from_goal.py  create_excel_from_goal.ps1  create_powerpoint_from_goal.ps1  create_word_from_goal.ps1  design_system.py  execution_memory.py  hotkey.py  icon_factory.py  ipc_client.py  knowledge_base.py  logging_config.py  mic_capture.py  office_skills.md  output_capture.py  point_mapper.py  point_parser.py  prompts.py  proposals.py  response_actions.py  screen_capture.py  settings_window.py  state.py  tray.py
app/iagent-py/iagent/clients/: llm_client.py  transcription_client.py  tts_client.py
app/iagent-py/iagent/ui/: companion_position.py  companion_widget.py  history_window.py  proposal_popup.py  settings_window.py  task_inbox.py  tray_icon.py  waveform_bars.py  waveform_view.py
app/iagent-py/tests/: test_command_policy.py  test_companion_position.py  test_config.py  test_conversation_history.py  test_execution_memory.py  test_hotkey.py  test_ipc_client.py  test_knowledge_base.py  test_llm_sse_parser.py  test_point_mapper.py  test_point_parser.py  test_proposals.py  test_response_actions.py  test_screen_capture_labels.py  test_submit_text_prompt.py  test_transcription_parser.py  test_waveform_bars.py
app/iagent-py/tests/fixtures/: anthropic_sse_basic.txt  anthropic_sse_unknown_block.txt  assemblyai_v3_messages.json
app/worker/: .dev.vars.example  package-lock.json  package.json  wrangler.toml
crates/agentgrep/: Cargo.toml  NOTICE
crates/agentgrep/src/: cli.rs  context.rs  find.rs  lib.rs  main.rs  outline.rs  search.rs  smart_dsl.rs  smart_engine.rs  structure.rs  workspace.rs
crates/app-integrations/: Cargo.toml
crates/app-integrations/src/: browser.rs  excel.rs  form_fill.rs  lib.rs  office_workflows.rs  officecli.rs  outlook.rs  powerpoint.rs  vscode.rs  word.rs
crates/app-integrations/tests/: browser_smoke.rs  office_workflows_integration.rs
crates/app-integrations/tests/fixtures/office/: meeting-notes.docx  meeting-notes.txt  updates.csv
crates/desktop-monitor/: Cargo.toml
crates/desktop-monitor/examples/: monitor_test.rs
crates/desktop-monitor/src/: file_ops.rs  hotkey.rs  lib.rs
crates/iagent-agent-runtime/: Cargo.toml
crates/iagent-ambient-types/: Cargo.toml
crates/iagent-app-integrations/: Cargo.toml
crates/iagent-auth-types/: Cargo.toml
crates/iagent-azure-auth/: Cargo.toml
crates/iagent-background-types/: Cargo.toml
crates/iagent-batch-types/: Cargo.toml
crates/iagent-build-support/: Cargo.toml
crates/iagent-build-support/src/: lib.rs  paths.rs  storage_helpers.rs  tests.rs
crates/iagent-compaction-core/: Cargo.toml
crates/iagent-config-types/: Cargo.toml
crates/iagent-core/: Cargo.toml
crates/iagent-desktop-monitor/: Cargo.toml
crates/iagent-embedding/: Cargo.toml
crates/iagent-gateway-types/: Cargo.toml
crates/iagent-import-core/: Cargo.toml
crates/iagent-ipc-types/: Cargo.toml
crates/iagent-memory-types/: Cargo.toml
crates/iagent-overlay-ui/: Cargo.toml
crates/iagent-overlay-ui/src/: lib.rs
crates/iagent-protocol/: Cargo.toml
crates/iagent-protocol/src/: lib.rs
crates/iagent-protocol/src/protocol_tests/: core_events.rs  misc_events.rs
crates/iagent-suggestion-engine/: Cargo.toml
crates/iagent-suggestion-engine/src/: lib.rs
crates/iagent-tool-core/: Cargo.toml
crates/iagent-tool-core/src/: lib.rs
crates/jcode-protocol/: Cargo.toml
crates/jcode-protocol/src/: ipc.rs  lib.rs  types.rs
crates/jcode-storage/: Cargo.toml
crates/jcode-storage/src/: file_lock.rs  lib.rs
crates/jcode-tool-core/: Cargo.toml
crates/jcode-tool-core/src/: lib.rs
docs/: agent-s-integration.md  boundary-audit.md  browser-smoke.md  configuration.md  libc-audit.md  memory.md  personal-full-product-plan.md  product-focus.md  product-naming.md  rebrand-jcode-inventory.md  skills.md  stub-audit.md  tools.md
scripts/: LICENSE.txt  agent_trace.sh  analyze_runtime_memory_log.py  audit_terminal_bench_submission.py  auto_screenshot.sh  bench_startup.py  bench_startup_visible_ready.py  benchmark_swebench.py  benchmark_swebench_improved.py  benchmark_swebench_jcode.py  benchmark_tools.sh  build-dist.ps1  build_linux_compat.sh  capture_demo.sh  capture_screenshot.sh  check_code_size_budget.py  check_dependency_boundaries.py  check_panic_budget.py  check_swallowed_error_budget.py  code_size_budget.json  compare_token_usage.py  debug_socket_test.sh  dev_cargo.sh  install.ps1  install.sh  install_release.sh  installer.nsi  jcode_monitor.py  oauth_helper.py  panic_budget.json  quick-release.sh  real_provider_smoke.sh  refactor_shadow.sh  replay_recording.sh  run_terminal_bench_harbor.sh  smoke_test.sh  swallowed_error_budget.json  test_auth_e2e.sh  test_caching_detailed.py  test_ci_suites.py  (+7 more)
skills/: README.md
skills/browser/: SKILL.md
src/: agent.rs  agent_tests.rs  ambient.rs  ambient_tests.rs  attention_budget.rs  background.rs  browser.rs  browser_tests.rs  build.rs  bus.rs  catchup.rs  compaction.rs  config.rs  config_tests.rs  connector_packs.rs  copilot_usage.rs  core_loop_metrics.rs  desktop_ambient.rs  dictation.rs  dictation_tests.rs  embedding.rs  env.rs  gateway.rs  goal.rs  goal_judge.rs  goal_tests.rs  id.rs  import.rs  intent_manifest.rs  lib.rs  logging.rs  login_qr.rs  main.rs  meeting_memory.rs  memory.rs  memory_agent.rs  memory_log.rs  memory_prompt.rs  memory_tests.rs  memory_types.rs  (+50 more)
tests/: auth_login_flow.rs  ipc_protocol.rs  provider_matrix.rs  test_injection_fix.py  test_injection_thorough.py  test_selfdev_reload.py
(+471 files in other folders)
