[package]
name = "iagent"
version = "0.12.2"
description = "Task execution backend for the iAgent Windows ambient agent"
edition = "2024"
autobins = false

[workspace]
members = [
    ".",
    "crates/jcode-agent-runtime",
    "crates/iagent-ambient-types",
    "crates/iagent-auth-types",
    "crates/jcode-embedding",
    "crates/iagent-gateway-types",
    "crates/jcode-import-core",
    "crates/jcode-pdf",
    "crates/iagent-background-types",
    "crates/iagent-batch-types",
    "crates/jcode-build-support",
    "crates/jcode-compaction-core",
    "crates/iagent-config-types",
    "crates/jcode-core",
    "crates/iagent-memory-types",
    "crates/iagent-message-types",
    "crates/jcode-overnight-core",
    "crates/jcode-plan",
    "crates/jcode-swarm-core",
    "crates/jcode-protocol",
    "crates/iagent-selfdev-types",
    "crates/iagent-session-types",
    "crates/jcode-storage",
    "crates/iagent-side-panel-types",
    "crates/jcode-azure-auth",
    "crates/jcode-notify-email",
    "crates/jcode-provider-metadata",
    "crates/jcode-provider-core",
    "crates/jcode-provider-openrouter",
    "crates/jcode-provider-openai",
    "crates/jcode-provider-gemini",
    "crates/iagent-usage-types",
    "crates/iagent-task-types",
    "crates/jcode-tool-core",
    "crates/iagent-tool-types",
    "crates/jcode-update-core",
    "crates/jcode-terminal-launch",
    "crates/iagent-desktop-monitor",
    "crates/iagent-suggestion-engine",
    "crates/iagent-overlay-ui",
    "crates/iagent-app-integrations",
    "crates/agentgrep",
]

[lib]
name = "iagent"
path = "src/lib.rs"

[[bin]]
name = "iagent"
path = "src/main.rs"

[[bin]]
name = "iagent-test-api"
path = "src/bin/test_api.rs"

[[bin]]
name = "iagent-harness"
path = "src/bin/harness.rs"

[[bin]]
name = "iagent-ambient"
path = "src/bin/ambient.rs"

[[bin]]
name = "iagent-overlay-ui"
path = "src/bin/overlay_ui.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# File operations
glob = "0.3"
ignore = "0.4"           # gitignore-aware file walking
walkdir = "2"
similar = "2"            # diffing for edits

# Utilities
dirs = "5"               # home directory
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"        # URL encoding for web search
uuid = { version = "1", features = ["v4", "v5"] }
proctitle = "0.1"

# Embeddings (local inference) - behind feature flag (163 crates, slow to compile)
jcode-embedding = { path = "crates/jcode-embedding", optional = true }
iagent-gateway-types = { path = "crates/iagent-gateway-types" }
jcode-import-core = { path = "crates/jcode-import-core" }

# OAuth
base64 = "0.22"
sha2 = "0.10"
rand = "0.9.3"
hex = "0.4"
libc = "0.2"
url = "2"
open = "5"               # Open URLs in browser
iagent-auth-types = { path = "crates/iagent-auth-types" }
jcode-azure-auth = { path = "crates/jcode-azure-auth" }
jcode-agent-runtime = { path = "crates/jcode-agent-runtime" }
iagent-ambient-types = { path = "crates/iagent-ambient-types" }
jcode-notify-email = { path = "crates/jcode-notify-email" }
jcode-provider-metadata = { path = "crates/jcode-provider-metadata" }
jcode-provider-core = { path = "crates/jcode-provider-core" }
jcode-provider-openai = { path = "crates/jcode-provider-openai" }
jcode-provider-openrouter = { path = "crates/jcode-provider-openrouter" }
jcode-provider-gemini = { path = "crates/jcode-provider-gemini" }
iagent-settings = { path = "crates/iagent-settings" }

arboard = "3"
iagent-desktop-monitor = { path = "crates/iagent-desktop-monitor" }
iagent-suggestion-engine = { path = "crates/iagent-suggestion-engine" }
iagent-overlay-ui = { path = "crates/iagent-overlay-ui" }
iagent-app-integrations = { path = "crates/iagent-app-integrations" }
jcode-update-core = { path = "crates/jcode-update-core" }
jcode-terminal-launch = { path = "crates/jcode-terminal-launch" }
iagent-usage-types = { path = "crates/iagent-usage-types" }

# Streaming
tokio-stream = "0.1"
bytes = "1"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }  # Only PNG/JPEG (skip avif/rav1e, exr, gif, tiff, etc)
unicode-width = "0.2"

# PDF parsing (behind feature flag)
jcode-pdf = { path = "crates/jcode-pdf", optional = true }
iagent-background-types = { path = "crates/iagent-background-types" }
iagent-batch-types = { path = "crates/iagent-batch-types" }
jcode-build-support = { path = "crates/jcode-build-support" }
jcode-compaction-core = { path = "crates/jcode-compaction-core" }
iagent-config-types = { path = "crates/iagent-config-types" }
jcode-core = { path = "crates/jcode-core" }
iagent-memory-types = { path = "crates/iagent-memory-types" }
iagent-message-types = { path = "crates/iagent-message-types" }
jcode-overnight-core = { path = "crates/jcode-overnight-core" }
jcode-plan = { path = "crates/jcode-plan" }
jcode-swarm-core = { path = "crates/jcode-swarm-core" }
jcode-protocol = { path = "crates/jcode-protocol" }
iagent-selfdev-types = { path = "crates/iagent-selfdev-types" }
iagent-session-types = { path = "crates/iagent-session-types" }
jcode-storage = { path = "crates/jcode-storage" }
iagent-task-types = { path = "crates/iagent-task-types" }
jcode-tool-core = { path = "crates/jcode-tool-core" }
iagent-tool-types = { path = "crates/iagent-tool-types" }
iagent-side-panel-types = { path = "crates/iagent-side-panel-types" }

# Archive extraction (for auto-update)
flate2 = "1"
tar = "0.4"
tempfile = "3"
agentgrep = { path = "crates/agentgrep" }
qrcode = { version = "0.14.1", default-features = false }
aws-config             = { version = "1.8.16",  optional = true }
aws-credential-types   = { version = "1.2.14",  optional = true }
aws-sdk-bedrockruntime = { version = "1.130.0", optional = true }
aws-sdk-bedrock        = { version = "1.141.0", optional = true }
aws-sdk-sts            = { version = "1.103.0", optional = true }
aws-smithy-types       = { version = "1.4.7",   optional = true }
aws-types              = { version = "1.3.15",  optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[features]
# Keep the heavyweight local ONNX/tokenizer embedding stack opt-in. It remains
# available via `--features embeddings` or `JCODE_DEV_FEATURE_PROFILE=full`, but
# ordinary check/build loops should not compile the tract/tokenizers subtree.
default = ["pdf"]
jemalloc = [
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemalloc-sys",
    "tikv-jemallocator/stats",
    "tikv-jemalloc-ctl/stats",
]
jemalloc-prof = [
    "jemalloc",
    "tikv-jemallocator/profiling",
    "tikv-jemalloc-ctl/profiling",
]
embeddings = ["dep:jcode-embedding"]
pdf = ["dep:jcode-pdf"]
bedrock = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sdk-bedrockruntime",
    "dep:aws-sdk-bedrock",
    "dep:aws-sdk-sts",
    "dep:aws-smithy-types",
    "dep:aws-types",
]
# Compatibility no-op for existing CI and callers; the Rust TUI implementation
# has been removed from the workspace.
terminal-ui = []

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[target.'cfg(not(windows))'.dependencies]
# Memory allocator (reduces fragmentation for long-running server). Jemalloc is
# disabled on Windows because the upstream crate is not a supported MSVC build.
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"

[profile.release]
opt-level     = 3
debug         = 0
codegen-units = 16
incremental   = false

[profile.release-fast]
inherits = "release"
opt-level = 1
codegen-units = 256
incremental = true

# Full LTO release for stable/distribution builds
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = false

[profile.selfdev]
inherits = "release-fast"
opt-level = 0

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.test]
debug = 0
incremental = true
codegen-units = 256

[dev-dependencies]
async-stream = "0.3"
cargo-llvm-cov = "0.6"

[build-dependencies]
