[package]
name = "iagent"
version = "0.2.0"
description = "Task execution backend for the iAgent Windows ambient agent"
edition = "2024"
autobins = false

[workspace]
members = [
    ".",
    "crates/iagent-agent-runtime",
    "crates/iagent-ambient-types",
    "crates/iagent-auth-types",
    "crates/iagent-embedding",
    "crates/iagent-gateway-types",
    "crates/iagent-import-core",
    "crates/iagent-pdf",
    "crates/iagent-background-types",
    "crates/iagent-batch-types",
    "crates/iagent-build-support",
    "crates/iagent-compaction-core",
    "crates/iagent-config-types",
    "crates/iagent-core",
    "crates/iagent-memory-types",
    "crates/iagent-message-types",
    "crates/iagent-overnight-core",
    "crates/iagent-plan",
    "crates/iagent-swarm-core",
    "crates/iagent-protocol",
    "crates/iagent-selfdev-types",
    "crates/iagent-session-types",
    "crates/iagent-storage",
    "crates/iagent-side-panel-types",
    "crates/iagent-azure-auth",
    "crates/iagent-notify-email",
    "crates/iagent-provider-metadata",
    "crates/iagent-provider-core",
    "crates/iagent-provider-openrouter",
    "crates/iagent-provider-openai",
    "crates/iagent-provider-gemini",
    "crates/iagent-usage-types",
    "crates/iagent-task-types",
    "crates/iagent-tool-core",
    "crates/iagent-tool-types",
    "crates/iagent-update-core",
    "crates/iagent-terminal-launch",
    "crates/desktop-monitor",
    "crates/suggestion-engine",
    "crates/overlay-ui",
    "crates/app-integrations",
    "crates/iagent-settings",
    "crates/iagent-ipc-types",
]

[lib]
name = "iagent"
path = "src/lib.rs"

[[bin]]
name = "iagent"
path = "src/main.rs"

[[bin]]
name = "iagent-test-api"
path = "src/bin/test_api.rs"

[[bin]]
name = "iagent-harness"
path = "src/bin/harness.rs"

[[bin]]
name = "iagent-ambient"
path = "src/bin/ambient.rs"

[[bin]]
name = "iagent-overlay-ui"
path = "src/bin/overlay_ui.rs"

[dependencies]
# Memory allocator (reduces fragmentation for long-running server)
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }

# Async runtime
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# File operations
glob = "0.3"
ignore = "0.4"           # gitignore-aware file walking
walkdir = "2"
similar = "2"            # diffing for edits

# Utilities
dirs = "5"               # home directory
anyhow = "1"
thiserror = "1"
libc = "0.2"             # Unix system calls (flock)
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"        # URL encoding for web search
uuid = { version = "1", features = ["v4", "v5"] }
proctitle = "0.1"

# Embeddings (local inference) - behind feature flag (163 crates, slow to compile)
iagent-embedding = { path = "crates/iagent-embedding", optional = true }
iagent-gateway-types = { path = "crates/iagent-gateway-types" }
iagent-import-core = { path = "crates/iagent-import-core" }

# OAuth
base64 = "0.22"
sha2 = "0.10"
rand = "0.9.3"
hex = "0.4"
url = "2"
open = "5"               # Open URLs in browser
iagent-auth-types = { path = "crates/iagent-auth-types" }
iagent-azure-auth = { path = "crates/iagent-azure-auth" }
iagent-agent-runtime = { path = "crates/iagent-agent-runtime" }
iagent-ambient-types = { path = "crates/iagent-ambient-types" }
iagent-notify-email = { path = "crates/iagent-notify-email" }
iagent-provider-metadata = { path = "crates/iagent-provider-metadata" }
iagent-provider-core = { path = "crates/iagent-provider-core" }
iagent-provider-openai = { path = "crates/iagent-provider-openai" }
iagent-provider-openrouter = { path = "crates/iagent-provider-openrouter" }
iagent-provider-gemini = { path = "crates/iagent-provider-gemini" }
iagent-settings = { path = "crates/iagent-settings" }

arboard = "3"
desktop-monitor = { path = "crates/desktop-monitor" }
suggestion-engine = { path = "crates/suggestion-engine" }
overlay-ui = { path = "crates/overlay-ui" }
app-integrations = { path = "crates/app-integrations" }
iagent-update-core = { path = "crates/iagent-update-core" }
iagent-terminal-launch = { path = "crates/iagent-terminal-launch" }
iagent-usage-types = { path = "crates/iagent-usage-types" }

# Streaming
tokio-stream = "0.1"
bytes = "1"

crossterm = { version = "0.29", features = ["event-stream"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }  # Only PNG/JPEG (skip avif/rav1e, exr, gif, tiff, etc)
unicode-width = "0.2"

# PDF parsing (behind feature flag)
iagent-pdf = { path = "crates/iagent-pdf", optional = true }
iagent-background-types = { path = "crates/iagent-background-types" }
iagent-batch-types = { path = "crates/iagent-batch-types" }
iagent-build-support = { path = "crates/iagent-build-support" }
iagent-compaction-core = { path = "crates/iagent-compaction-core" }
iagent-config-types = { path = "crates/iagent-config-types" }
iagent-core = { path = "crates/iagent-core" }
iagent-memory-types = { path = "crates/iagent-memory-types" }
iagent-message-types = { path = "crates/iagent-message-types" }
iagent-overnight-core = { path = "crates/iagent-overnight-core" }
iagent-plan = { path = "crates/iagent-plan" }
iagent-swarm-core = { path = "crates/iagent-swarm-core" }
iagent-protocol = { path = "crates/iagent-protocol" }
iagent-selfdev-types = { path = "crates/iagent-selfdev-types" }
iagent-session-types = { path = "crates/iagent-session-types" }
iagent-storage = { path = "crates/iagent-storage" }
iagent-task-types = { path = "crates/iagent-task-types" }
iagent-tool-core = { path = "crates/iagent-tool-core" }
iagent-tool-types = { path = "crates/iagent-tool-types" }
iagent-side-panel-types = { path = "crates/iagent-side-panel-types" }

# Archive extraction (for auto-update)
flate2 = "1"
tar = "0.4"
tempfile = "3"
agentgrep = { git = "https://github.com/1jehuang/agentgrep.git", rev = "63e420bb4e035490d28cbca3f58e26baf297048e" }
qrcode = { version = "0.14.1", default-features = false }
aws-config = { version = "1.8.16", optional = true }
aws-credential-types = { version = "1.2.14", optional = true }
aws-sdk-bedrockruntime = { version = "1.130.0", optional = true }
aws-types = { version = "1.3.15", optional = true }
aws-smithy-types = { version = "1.4.7", optional = true }
aws-sdk-bedrock = { version = "1.141.0", optional = true }
aws-sdk-sts = { version = "1.103.0", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[features]
# Keep the heavyweight local ONNX/tokenizer embedding stack opt-in. It remains
# available via `--features embeddings` or `JCODE_DEV_FEATURE_PROFILE=full`, but
# ordinary check/build loops should not compile the tract/tokenizers subtree.
default = ["pdf", "bedrock"]
jemalloc = [
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemalloc-sys",
    "tikv-jemallocator/stats",
    "tikv-jemalloc-ctl/stats",
]
jemalloc-prof = [
    "jemalloc",
    "tikv-jemallocator/profiling",
    "tikv-jemalloc-ctl/profiling",
]
embeddings = ["dep:iagent-embedding"]
bedrock = [
    "dep:aws-config",
    "dep:aws-sdk-bedrockruntime",
    "dep:aws-sdk-bedrock",
    "dep:aws-sdk-sts",
    "dep:aws-types",
    "dep:aws-smithy-types",
    "dep:aws-credential-types",
]
pdf = ["dep:iagent-pdf"]
# Compatibility no-op for existing CI and callers; the Rust TUI implementation
# has been removed from the workspace.
terminal-ui = []

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = 1
debug = 0
codegen-units = 256
incremental = true

[profile.selfdev]
inherits = "release"
opt-level = 0

# Full LTO release for stable/distribution builds
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = false

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.test]
debug = 0
incremental = true
codegen-units = 256

[dev-dependencies]
async-stream = "0.3"
cargo-llvm-cov = "0.6"

[build-dependencies]
