[project]
name = "iagent"
version = "0.1.0"
description = "iAgent - voice-first desktop assistant for Windows."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyside6>=6.7",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "mss>=9.0",
    "pynput>=1.7.6",
    "httpx>=0.27",
    "websockets>=12.0",
    "pillow>=10.0",
    "platformdirs>=4.0",
    "qasync>=0.27",
    "pycaw>=20251023",
    "comtypes>=1.4.16",
    "piper-tts>=1.4.2",
    "pyttsx3>=2.98",
    "python-docx>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.scripts]
iagent = "iagent.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "check_ws.py",
    "test_ipc.py",
    "test_ipc_full.py",
    "test_ws.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"iagent/prompts.py" = ["E501"]  # prompt strings are naturally long
"iagent/create_document_from_goal.py" = ["E501"]  # document templates are prose-heavy

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iagent"]
