[package]
name = "app-integrations"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suggestion-engine = { path = "../suggestion-engine" }
tokio = { version = "1", features = ["rt", "macros"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
