[package]
name = "desktop-monitor"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
dirs = "5"
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }