[package]
name = "iagent-build-support"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
iagent-core = { path = "../iagent-core" }
iagent-selfdev-types = { path = "../iagent-selfdev-types" }
iagent-storage = { path = "../iagent-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
