[package]
name = "iagent-overlay-ui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
iagent-suggestion-engine = { path = "../iagent-suggestion-engine" }
tokio = { version = "1", features = ["macros", "rt", "signal", "sync", "time"] }
tracing = "0.1"

