[package]
name = "iagent-protocol"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
iagent-batch-types = { path = "../iagent-batch-types" }
iagent-config-types = { path = "../iagent-config-types" }
iagent-message-types = { path = "../iagent-message-types" }
iagent-plan = { path = "../iagent-plan" }
iagent-provider-core = { path = "../iagent-provider-core" }
iagent-selfdev-types = { path = "../iagent-selfdev-types" }
iagent-session-types = { path = "../iagent-session-types" }
iagent-side-panel-types = { path = "../iagent-side-panel-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1"
rand = "0.9"
