[package]
name = "iagent-suggestion-engine"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
iagent-desktop-monitor = { path = "../iagent-desktop-monitor" }
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

